test_suite/tests/ui/unknown-attribute/variant.stderr
error: unknown serde variant attribute `abc`
 --> $DIR/variant.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

